# FastICA_in-_C-

MultiThread/src/: ContrastFunctions.cpp  ContrastFunctions.h  DataFormat.h  DataWriter.cpp  DataWriter.h  FastICAProgram.h  FastICASettings.cpp  FastICASettings.h  FastICAold.cpp  FastICAold.h  Makefile  MatrixWriter.cpp  MatrixWriter.h  ProgramTools.cpp  ProgramTools.h  SimpleCLParser.cpp  SimpleCLParser.h  TypeIdentifier.cpp  TypeIdentifier.h  reader.h  sharedData.h
MultiThread/system/: make.common  make.linux_gcc1
MultiThread/tools/: Makefile  hFastICA.cpp  hFastICA.h
ThreadsAndMPI/: CMakeLists.txt  INSTALL  Makefile
ThreadsAndMPI/src/: ContrastFunctions.cpp  ContrastFunctions.h  DataWriter.cpp  DataWriter.h  FastICAProgram.cpp  FastICAProgram.h  FastICASettings.h  FastICAold.cpp  FastICAold.h  MPIHolder.cpp  MPIHolder.h  MPIWrapper.cpp  MPIWrapper.h  Makefile  MatrixReaderNew.cpp  MatrixReaderNew.h  MatrixWriter.cpp  MatrixWriter.h  PartitionData.cpp  PartitionData.h  ProgramTools.cpp  ProgramTools.h  SimpleCLParser.cpp  Util.cpp  Util.h  reader.cpp  reader.h
ThreadsAndMPI/system/: make.linux_gcc  make.linux_gcc1  make.mac_gcc
ThreadsAndMPI/tools/: Makefile  hFastICA.cpp  hFastICA.h
