cmake_minimum_required(VERSION 3.1)
project(New)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories("/usr/include/eigen")
set(SOURCE_FILES
    .metadata/.plugins/org.eclipse.cdt.make.core/specs.c
    .metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
    src/average.cpp
    src/average.h
    src/bin_search_tree.cpp
    src/bin_search_tree.h
    src/center_data.cpp
    src/center_data.h
    src/ContrastFunctions.cpp
    src/ContrastFunctions.h
    src/ConvolutionFilter.cpp
    src/ConvolutionFilter.h
    src/covariance.cpp
    src/covariance.h
    src/CWMacGlue.cpp
    src/DataFormat.h
    src/DataReader.cpp
    src/DataReader.h
    src/DataWriter.cpp
    src/DataWriter.h
    src/eigenstuff.cpp
    src/eigenstuff.h
    src/EpochMarkedSimpleBinary.cpp
    src/EpochMarkedSimpleBinary.h
    src/FastICAold.cpp
    src/FastICAold.h
    src/FastICASettings.cpp
    src/FastICASettings.h
    src/FilterConstants.h
    src/FilterFactory.cpp
    src/FilterFactory.h
    src/FilterOptions.cpp
    src/FilterOptions.h
    src/index_array.cpp
    src/index_array.h
    src/index_node.h
    src/LAPACKWrapper.h
    src/MatrixOperations.cpp
    src/MatrixOperations.h
    src/MatrixReader.cpp
    src/MatrixReader.h
    src/MatrixWriter.cpp
    src/MatrixWriter.h
    src/Matrixz.cpp
    src/Matrixz.h
    src/MersenneTwister.cpp
    src/MersenneTwister.h
    src/MPIWrapper.cpp
    src/MPIWrapper.h
    src/NICFilter.cpp
    src/NICFilter.h
    src/NicMatrix.cpp
    src/NicMatrix.h
    src/NicVector.cpp
    src/NicVector.h
    src/PartitionedDataset.cpp
    src/PartitionedDataset.h
    src/ProgramTools.cpp
    src/ProgramTools.h
    src/RangeGenerator.cpp
    src/RangeGenerator.h
    src/RingBlock.cpp
    src/RingBlock.h
    src/SimpleCLParser.cpp
    src/SimpleCLParser.h
    src/Sobi.cpp
    src/Sobi.h
    src/SortComponents.cpp
    src/SortComponents.h
    src/sphering_matrix.cpp
    src/sphering_matrix.h
    src/StaticGainFilter.cpp
    src/StaticGainFilter.h
    src/TypeIdentifier.cpp
    src/TypeIdentifier.h
    src/version.cpp
    src/version.h
    src/WinHeader.h
    test/src/reader_test.cpp
    test/src/TestCenterData.cpp
    test/src/TestCovariance.cpp
    test/src/TestEigenstuff.cpp
    test/src/TestFastICA.cpp
    test/src/TestMatrixOperations.cpp
    test/src/TestMersenneTwister.cpp
    test/src/TestReadWrite.cpp
    test/src/TestSphering.cpp
    tools/dFilter.cpp
    tools/dFilter.h
    tools/hConvertData.cpp
    tools/hConvertData.h
    tools/hFastICA.cpp
    tools/hFastICA.h
    tools/hMultiply.cpp
    tools/hMultiply.h
    tools/hReadRaw.cpp
    tools/hReadRaw.h
    tools/hSphering.cpp
    tools/hSphering.h
    tools/Mat.cpp
    tools/Mat.h)

add_executable(New ${SOURCE_FILES} src/MatrixReaderNew.cpp src/MatrixReaderNew.h)